- добавлен модуль получения данных из сети - начата реализация логии фрагмента каталога

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -57,4 +57,9 @@
     <string name="error_message">Произошла непредвиденная ошибка</string>
 
 
+    //formating
+    <string name="formatted_price">%1$s %2$s</string>
+    <string name="discount_format">-%1$d%%</string>
+    <string name="reviews_format">(%1$d)</string>
+
 </resources>
